[package]
name = "revision-control-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
derive_more = "0.99.17"
blake3 = "1.5.0"
serde = {version = "1.0.194", features = ["derive"]}
serde_json = "1.0.111"

[lib]
name = "lib"
path = "src/lib.rs"